--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "node-express",
-  "version": "1.0.0",
-  "description": "Node Express Examples",
-  "main": "index.js",
+  "name": "confusionserver",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "node ./bin/www"
   },
-  "author": "Aranya Aryaman",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "morgan": "^1.10.0"
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
+    "mongoose": "^5.12.13",
+    "mongoose-currency": "^0.2.0",
+    "morgan": "~1.9.0"
   }
 }
